--- a/pyproject.toml
+++ b/pyproject.toml
@@ -47,7 +47,6 @@ redis      = ["django-redis>=5.0"]
 async      = ["uvicorn>=0.20"]
 dev = [
     "pytest>=7.0",
-    "pytest-django>=4.5",
     "pytest-asyncio>=0.21",
     "pytest-cov>=4.0",
     "black>=23.0",
@@ -92,7 +91,12 @@ fail_under   = 80
 [tool.ruff]
 line-length = 100
 target-version = "py310"
+
+[tool.ruff.lint]
 select = ["E", "F", "I", "UP", "B"]
+
+[tool.ruff.lint.isort]
+known-first-party = ["ninja_boost"]
 
 [tool.mypy]
 strict = true
